-- MySQL Script generated by MySQL Workbench
-- Wed Aug 30 21:33:14 2023
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema senai_ios
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema senai_ios
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `senai_ios` DEFAULT CHARACTER SET utf8 ;
USE `senai_ios` ;

-- -----------------------------------------------------
-- Table `senai_ios`.`filme`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `senai_ios`.`filme` (
  `id` INT NOT NULL,
  `titulo` VARCHAR(45) NULL,
  `ano_de_lancamento` SMALLINT(4) NULL,
  `duracao` INT NULL,
  `trailer` TEXT NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `senai_ios`.`pais_de_origem`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `senai_ios`.`pais_de_origem` (
  `id` INT NOT NULL,
  `nome` VARCHAR(45) NOT NULL,
  `filme_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_pais_de_origem_filme_idx` (`filme_id` ASC) VISIBLE,
  CONSTRAINT `fk_pais_de_origem_filme`
    FOREIGN KEY (`filme_id`)
    REFERENCES `senai_ios`.`filme` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `senai_ios`.`diretor`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `senai_ios`.`diretor` (
  `id` INT NOT NULL,
  `nome` VARCHAR(45) NOT NULL,
  `filme_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_pais_de_origem_filme_idx` (`filme_id` ASC) VISIBLE,
  CONSTRAINT `fk_pais_de_origem_filme0`
    FOREIGN KEY (`filme_id`)
    REFERENCES `senai_ios`.`filme` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `senai_ios`.`genero`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `senai_ios`.`genero` (
  `id` INT NOT NULL,
  `nome` ENUM("Ação", "Drama", "Aventura", "Suspense", "Comédia", "Ficção") NOT NULL,
  `filme_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_pais_de_origem_filme_idx` (`filme_id` ASC) VISIBLE,
  CONSTRAINT `fk_pais_de_origem_filme1`
    FOREIGN KEY (`filme_id`)
    REFERENCES `senai_ios`.`filme` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `senai_ios`.`ator`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `senai_ios`.`ator` (
  `id` INT NOT NULL,
  `nome` VARCHAR(45) NOT NULL,
  `idade` SMALLINT NULL,
  `pais_de_origem_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_ator_pais_de_origem_idx` (`pais_de_origem_id` ASC) VISIBLE,
  CONSTRAINT `fk_ator_pais_de_origem`
    FOREIGN KEY (`pais_de_origem_id`)
    REFERENCES `senai_ios`.`pais_de_origem` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `senai_ios`.`filme_has_ator`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `senai_ios`.`filme_has_ator` (
  `filme_id` INT NOT NULL,
  `ator_id` INT NOT NULL,
  PRIMARY KEY (`filme_id`, `ator_id`),
  INDEX `fk_filme_has_ator_ator1_idx` (`ator_id` ASC) VISIBLE,
  INDEX `fk_filme_has_ator_filme1_idx` (`filme_id` ASC) VISIBLE,
  CONSTRAINT `fk_filme_has_ator_filme1`
    FOREIGN KEY (`filme_id`)
    REFERENCES `senai_ios`.`filme` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_filme_has_ator_ator1`
    FOREIGN KEY (`ator_id`)
    REFERENCES `senai_ios`.`ator` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `senai_ios`.`capa`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `senai_ios`.`capa` (
  `id` INT NOT NULL,
  `camera` BLOB NULL,
  `catalogo_de_imagens` BLOB NULL,
  `filme_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_pais_de_origem_filme_idx` (`filme_id` ASC) VISIBLE,
  CONSTRAINT `fk_pais_de_origem_filme2`
    FOREIGN KEY (`filme_id`)
    REFERENCES `senai_ios`.`filme` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
