// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table filme {
  id long
  duracao integer
  ano_de_lancamento integer
  capa longblob
  trailer text
}

Table ator {
  id long
  nome varchar
  idade integer
}

Table pais_de_origem {
  id long
  nome string
}

Table genero {
  id long
  nome string
}

Table diretor {
  id long
  nome string
}

Table capa {
  id long
  camera longblob
  catalogo_de_imagens longblob
}

Ref: filme.id <> ator.id
Ref: filme.id - pais_de_origem.id
Ref: filme.id - genero.id
Ref: filme.id - diretor.id
Ref: filme.id - capa.id